# math

./: .gitignore  CMakeLists.txt  README.md
include/: Convertes.hpp  arbitrary_vector.hpp  complex_number.hpp  custom_float.hpp  custom_int.hpp  differentiation.hpp  general_math.hpp  general_vector.hpp  math_exceptions.hpp  matrix.hpp  quaternion.hpp  transform.hpp  transformation_matrix.hpp  vector3d.hpp  vector4d.hpp
libs/: matrix.hpp  vector3d.hpp
src/: custom_float.cpp  custom_int.cpp  differentiation.cpp  general_math.cpp  main.cpp  transform.cpp
